✅ Final commit — Phase 17 complete (logo, favicon, splash)

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "xstreamify-auth"
-  }
+  },
+  "targets": {
+    "xstreamify-auth": {
+      "hosting": {
+        "live": [
+          "xstreamify-auth"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
