--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,11 @@
 {
-  "hosting": {
-"public": "public",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      { "source": "**", "destination": "/browse.html" }
-    ]
-  }
+  "hosting": [
+    {
+      "site": "xstreamify-auth",
+      "public": "public",
+      "rewrites": [
+        { "source": "**", "destination": "/browse9.html" }
+      ]
+    }
+  ]
 }
-
-
